# recsys-betting

./: README.md  pyproject.toml
model_registry/: two_tower_10_001_80_250130.pth
notebooks/: 00_eda.ipynb  01_compute_features.ipynb  02_training_2T_model.ipynb  03_get_recommendations.ipynb  04_bet_slips.ipynb
recsys/: config.py
recsys/evaluation/: compare_models.py
recsys/features/: __init__.py  events.py  feature_store.py  interactions.py  labels.py  users.py
recsys/inference/: __init__.py  get_recommendations.py
recsys/models/: __init__.py  two_tower.py  two_tower_betslip.py
recsys/train/: __init__.py  experiment.py  train_test_split.py  train_with_metrics.py
recsys/utils/: helper.py  utils.py
